0.3.5
 * Output content of API errors when encountered
 * Fix homepage link in gemspec

0.3.3
 * Bugfix

0.3.2
 * Fixed whitelabel lookup to use new method of non-url identifiers.

0.3.1
 * Added support for listing a user's point accounts
 * Added support for new client and campaign-specific leaderboards
 * Added support for full user information endpoint.

0.3.0
 * Added support for blacklisting users
 * Added support for creating point redemptions for a user

0.2.9
 * Added push API subscription methods
 * Updated documentation based on new user options.

0.2.8
 * Added support for classification leaderboard
 * Updated user bridge to support passing all possible options for a user
 * Updated documentation based on new user options.

0.2.5
 * Added support for custom api_url endpoint
 * APIError now includes body response.

0.2.4 - Released April 17, 2012
 * Fixing up incompleted file requirements in gemspec.

0.2.3 - Release April 17, 2012
 * Added support for the votes endpoint

0.2.2 - Release April 9, 2012
 * Added the ability to vote for activities in a voting-enabled promotion
 * Added the votes leaderboard endpoint for voting-enabled promotions

0.2.1 - Released March 11, 2012
 * Added the ability to create users.

0.2.0 - Released March 6, 2012
 * Removed jeweler dependency
 * Introduced Checkdin::VERSION for runtime version information
 * Checkdin::UserBridge added for creating and logging users in

0.1.0 - Released February 14, 2012
 * Initial usable release