@@ -1,0 +1,35 @@
+---
+- !ruby/struct:VCR::HTTPInteraction
+  request: !ruby/struct:VCR::Request
+    method: :post
+    uri: http://core.dev:80/api/v1/promotions/custom_activity?campaign_id=37&client_id={client_id}&client_secret={client_secret}&promotion%5Bcustom_activity_node%5D%5Bname%5D=my-custom&promotion%5Breward%5D%5Breward_points%5D=27&promotion%5Breward%5D%5Btype%5D=point_reward&promotion%5Btitle%5D=Some%20awesome%20promotion&promotion%5Btrigger_schedule%5D%5Binterval%5D=5&promotion%5Btrigger_schedule%5D%5Brewarding%5D=once&promotion%5Btrigger_schedule%5D%5Bwinner_picked%5D=activity_interval
+    body: 
+    headers:
+      accept:
+      - application/json
+      user-agent:
+      - checkdin ruby gem 0.3.0
+      content-length:
+      - '0'
+  response: !ruby/struct:VCR::Response
+    status: !ruby/struct:VCR::ResponseStatus
+      code: 201
+      message: Created
+    headers:
+      content-type:
+      - application/json; charset=utf-8
+      x-ua-compatible:
+      - IE=Edge
+      etag:
+      - ! '"92b63ebac3e992781dd2b7327eebe1cc"'
+      cache-control:
+      - max-age=0, private, must-revalidate
+      x-request-id:
+      - cb9c84ae1f707e2c8adb78ede25f5172
+      x-runtime:
+      - '0.060565'
+    body: ! '{"promotion":{"id":292,"type":"promotion_custom_activity","title":"Some
+      awesome promotion","description":null,"state":"trial","terms":null,"above_21_only":false,"starts_at":"2012-08-24T00:00:00-05:00","ends_at":"2013-08-24T23:59:59-05:00","won_rewards":{"count":0,"href":"{api_url}/won_rewards.json?promotion_id=292"},"custom_activity_node":{"name":"my-custom","id":71},"campaign":{"name":"BCKSTGR
+      Campaign","description":"BCKSTGR Campaign.","start_date":"2012-08-24","end_date":"2013-08-24","href":"{api_url}/campaigns/37.json"},"reward":{"type":"point_reward","single_delivery":false,"private_delivery_description":null,"public_delivery_description":null,"reward_points":27},"trigger_schedule":{"rewarding":"once","winner_picked":"activity_interval","interval":5,"maximum_daily_actions":null,"human_readable":"Rewarded
+      once when a user reaches 5 relevant actions or points."},"href":"{api_url}/promotions/292.json","prerequisites":[]}}'
+    http_version: '1.1'
